--- a/app/globals.css
+++ b/app/globals.css
@@ -83,14 +83,14 @@ html {
 }
 
 [data-theme="light"] {
-  --gradient-start: rgba(245, 244, 238, 0);
-  --gradient-end: rgba(245, 244, 238, 0.9);
+  --gradient-start: rgba(255, 255, 255, 0);
+  --gradient-end: rgba(255, 255, 255, 0.9);
 
-  --color-bg: #f5f4ee;
+  --color-bg: #ffffff;
   --color-text: #18181b;
   --color-link: #2563eb;
   --blockquote-color: #64748b;
-  --code-background-color: #ffffff;
+  --code-background-color: #f4f4f4;
   --code-color: #1e293b;
   --syntax-comment: #64748b;
   --syntax-keyword: #2563eb;
@@ -106,7 +106,7 @@ html {
   --color-text-rgb: 24, 24, 27;
   --github-border: rgba(24, 24, 27, 0.1);
   --github-hover-bg: #f8fafc;
-  --color-bg-rgb: 245, 244, 238;
+  --color-bg-rgb: 255, 255, 255;
   color-scheme: light;
 }
 
@@ -474,17 +474,17 @@ th {
   display: flex;
   align-items: center;
   gap: 0.5rem;
-  padding: 2px 6px;
+  padding: 2px 10px;
   border-radius: 8px;
   background: var(--code-background-color);
   white-space: nowrap;
-  font-size: calc(var(--font-size-mobile)*0.85);
+  font-size: calc(var(--font-size-mobile) * 0.95);
   font-weight: 500;
 }
 
 .about-interest .detail-link svg {
   margin: 0px;
-  stroke-width: 2;
+  stroke-width: 1.8;
 }
 
 .detail-link {
@@ -660,12 +660,8 @@ th {
   stroke-width: 2.5;
 }
 
-[data-theme="light"] .tag.selected {
-  background: rgba(var(--color-text-rgb), 0.05);
-}
-
 .tag.selected {
-  background: rgba(var(--color-text-rgb), 0.15);
+  background: rgba(var(--color-text-rgb), 0.1);
 }
 
 .list-header .views,
@@ -953,7 +949,7 @@ th {
   animation: slideIn 0.3s ease;
   display: flex;
   flex-direction: column;
-  padding: 20px;
+  padding: 20px 0px 20px 20px;
 }
 
 .toc-header {
@@ -972,7 +968,7 @@ th {
 .toc-content {
   flex: 1;
   overflow-y: auto;
-  padding: 20px 0 100px;
+  padding: 0px 0 100px;
   margin: 0;
   scrollbar-width: thin;
   scrollbar-color: rgba(var(--color-text-rgb), 0.3) transparent;
@@ -1018,6 +1014,7 @@ th {
   border-radius: 8px;
   transition: all 0.2s ease;
   opacity: 0.7;
+  margin-right: 20px;
 }
 
 @keyframes slideIn {
@@ -2716,7 +2713,7 @@ a[data-footnote-ref] {
   }
 
   .about-details {
-    gap: 0.75rem;
+    gap: 1.25rem;
     width: 360px;
   }
 
@@ -2754,6 +2751,10 @@ a[data-footnote-ref] {
   .scroll-to-top svg {
     width: 20px;
     height: 20px;
+  }
+
+  .toc-close {
+    margin-right: 0px;
   }
 
   .stats-cards {
@@ -3174,21 +3175,21 @@ a[data-footnote-ref] {
     text-decoration: none;
   }
 
-  [data-theme="light"] .list-row:hover .tag {
-    background: rgba(var(--color-text-rgb), 0.05);
-  }
-
   .list-row:hover .tag {
-    background: rgba(var(--color-text-rgb), 0.25);
+    background: rgba(var(--color-text-rgb), 0.1);
   }
 
   .about-interest .detail-link:hover {
     background: rgba(var(--color-text-rgb), 0.1);
-    color: var(--color-text);
   }
 
   .about-interest .detail-link:hover svg {
     transform: scale(1.2);
+  }
+
+  .about-container img:hover {
+    transform: scale(1.05);
+    cursor: default;
   }
 
   .list-row:hover .title-blog {
