--- a/app/globals.css
+++ b/app/globals.css
@@ -369,11 +369,11 @@ th {
 .about-overlay {
   position: fixed;
   inset: 0;
-  background: rgba(var(--color-bg-rgb), 0.8);
-  backdrop-filter: blur(12px);
+  background: rgba(var(--color-bg-rgb), 0.4);
+  backdrop-filter: blur(8px);
   display: grid;
   place-items: center;
-  padding: 1rem;
+  padding: 1rem 2rem;
   z-index: 1000;
 }
 
@@ -415,7 +415,7 @@ th {
 .about-avatar {
   border-radius: 50%;
   object-fit: cover;
-  box-shadow: 0px 0px 40px -15px rgba(var(--color-text-rgb), 1);
+  box-shadow: 0px 0px 15px 5px rgba(var(--color-text-rgb), 0.1);
 }
 
 .about-container img {
@@ -451,7 +451,6 @@ th {
 .detail-item {
   display: grid;
   grid-template-columns: 110px 1fr;
-  gap: 0.25rem;
 }
 
 .detail-label {
@@ -467,14 +466,14 @@ th {
 
 .about-interest {
   display: flex;
-  gap: 1rem;
+  gap: 0.75rem;
 }
 
 .about-interest .detail-link {
   display: flex;
   align-items: center;
-  gap: 0.5rem;
-  padding: 2px 10px;
+  gap: 0.25rem;
+  padding: 2px 8px;
   border-radius: 8px;
   background: var(--code-background-color);
   white-space: nowrap;
@@ -496,7 +495,7 @@ th {
 .detail-link svg {
   color: var(--color-link);
   stroke-width: 2.5;
-  margin: 0px 0px -1.5px 0px;
+  margin: 0px 0px -2px 0px;
 }
 
 .option-switcher {
