--- a/app/globals.css
+++ b/app/globals.css
@@ -541,7 +541,7 @@ th {
   color: rgba(var(--color-text-rgb), 0.5);
   font-size: calc(var(--font-size-mobile) * 0.9);
   border-bottom: 1px solid rgba(var(--color-text-rgb), 0.1);
-  font-weight: 400;
+  font-weight: 500;
   align-items: center;
 }
 
@@ -620,7 +620,6 @@ th {
   align-items: center;
   justify-content: center;
   color: var(--color-text);
-  opacity: 0.8;
   padding: 0.25rem;
   width: 28px;
   height: 28px;
@@ -650,7 +649,7 @@ th {
   cursor: pointer;
   display: flex;
   align-items: center;
-  gap: 0.5rem;
+  gap: 0.25rem;
 }
 
 .tag-reset {
@@ -1142,7 +1141,7 @@ th {
   border: 1px solid var(--code-background-color);
   box-shadow: 0 2px 8px rgba(var(--color-text-rgb), 0.07);
   color: var(--color-text);
-  font-size: calc(var(--font-size-mobile) * 1);
+  font-size: calc(var(--font-size-mobile) * 0.9);
   border-radius: 0.5rem;
   white-space: nowrap;
   opacity: 0;
@@ -1201,13 +1200,13 @@ th {
   align-items: center;
   gap: 0.4rem;
   margin-left: 0.25rem;
-  padding-left: 0.5rem;
-  border-left: 1px solid rgba(var(--color-text-rgb), 0.2);
 }
 
-.github-stars svg {
-  position: relative;
-  top: -1px;
+.star-number {
+  font-size: calc(var(--font-size-mobile) * 0.85);
+  border-radius: 4px;
+  margin: 0;
+  opacity: 0.7;
 }
 
 .like-button {
@@ -3157,8 +3156,7 @@ a[data-footnote-ref] {
   }
 
   .action-link:not(.disabled):hover {
-    opacity: 1;
-    scale: 1.1;
+    scale: 1.2;
   }
 
   .list-row:hover {
