--- a/app/globals.css
+++ b/app/globals.css
@@ -195,7 +195,7 @@ body {
   color: var(--color-text);
   background-color: var(--color-bg);
   margin: 0;
-  padding: 0 25px 40px;
+  padding: 0 25px;
   font-size: var(--font-size-mobile);
 }
 
@@ -335,11 +335,17 @@ th {
 /* Content Switcher */
 
 .content-wrapper {
-  margin: 2.5rem 0 0;
   display: flex;
   flex-direction: column;
-  row-gap: 2rem;
-  min-height: 360px;
+  justify-content: space-between;
+  min-height: 100dvh;
+}
+
+.content-header-table {
+  padding-top: 2.5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
 }
 
 .content-header {
@@ -522,6 +528,11 @@ th {
   font-family: var(--font-normal);
   width: 100%;
   animation: fadeIn 0.1s ease;
+}
+
+.table-max {
+  height: 17.9rem;
+  overflow-y: scroll;
 }
 
 @keyframes fadeIn {
@@ -1029,10 +1040,10 @@ th {
 /* Footer */
 
 .site-footer {
-  margin: 4rem 0 1rem;
+  margin: 4rem 0 2rem;
   display: flex;
   flex-direction: column;
-  gap: 1.5rem;
+  gap: 1.2rem;
 }
 
 .footer-link {
@@ -1133,7 +1144,7 @@ th {
 [data-tooltip]:before {
   content: attr(data-tooltip);
   position: absolute;
-  top: calc(100% + 6px);
+  bottom: calc(100% + 10px);
   left: 50%;
   transform: translateX(-50%);
   padding: 6px 10px;
@@ -2657,7 +2668,7 @@ a[data-footnote-ref] {
   }
 
   .container {
-    padding: 0 var(--padding-small) var(--padding-small);
+    padding: 0 var(--padding-small) 0;
   }
 
   h1 {
@@ -2690,6 +2701,11 @@ a[data-footnote-ref] {
 
   .about-container {
     border-radius: 12px;
+  }
+
+  .table-max {
+    height: 26.9rem;
+    overflow-y: scroll;
   }
 
   .about-header {
@@ -2875,6 +2891,13 @@ a[data-footnote-ref] {
     top: -3.5px;
   }
 
+  .site-footer {
+    margin: 2rem 0 3rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+  }
+
   .photo-grid {
     margin-left: -1.5rem;
   }
@@ -2891,10 +2914,6 @@ a[data-footnote-ref] {
   .meta-row {
     gap: 0.75rem;
     margin-bottom: 0.25rem;
-  }
-
-  .site-footer {
-    margin: 4rem 0 1rem;
   }
 
   .footer-nav-mobile {
