--- a/app/globals.css
+++ b/app/globals.css
@@ -342,7 +342,7 @@ th {
 }
 
 .content-header-table {
-  padding-top: 2.5rem;
+  padding-top: 2rem;
   display: flex;
   flex-direction: column;
   gap: 2rem;
@@ -359,17 +359,21 @@ th {
   align-items: center;
   cursor: pointer;
   border-radius: 6px;
-  padding: 5px 10px;
+  padding: 0.38rem 1rem;
   margin: -10px;
   -webkit-tap-highlight-color: transparent;
+  border: 1px solid rgba(var(--color-text-rgb), 0.1);
+  background: rgba(var(--color-text-rgb), 0.04);
 }
 
 .site-title {
   font-family: var(--font-heading);
-  font-size: calc(var(--font-size-mobile) * 1.4);
+  font-size: calc(var(--font-size-mobile) * 1.2);
   color: var(--color-text);
   text-decoration: none;
   font-weight: 500;
+  padding: 0;
+  margin: 0;
 }
 
 .about-overlay {
@@ -407,7 +411,7 @@ th {
 }
 
 .about-content {
-  padding: 2rem 1.25rem 2rem;
+  padding: 2rem 1.25rem 2.5rem;
 }
 
 .about-header {
@@ -461,11 +465,13 @@ th {
   justify-content: center;
 }
 
+.detail-label,
 .detail-label svg {
-  width: auto;
-  height: 1.3rem;
   margin: 0;
   padding: 0;
+  height: 1.3rem;
+  stroke-width: 1.5;
+  opacity: 0.8;
 }
 
 .detail-content {
@@ -519,10 +525,12 @@ th {
   cursor: pointer;
   font-size: var(--font-size-mobile);
   color: rgba(var(--color-text-rgb), 0.6);
+  border: 1px solid transparent;
 }
 
 .option-btn.active {
-  background: var(--code-background-color);
+  border: 1px solid rgba(var(--color-text-rgb), 0.1);
+  background: rgba(var(--color-text-rgb), 0.04);
   color: var(--color-text);
   font-weight: 500;
 }
@@ -593,7 +601,7 @@ th {
 
 .list-row .title {
   color: var(--color-text);
-  font-weight: 500;
+  font-weight: 400;
 }
 
 .list-row .views {
@@ -790,7 +798,7 @@ th {
 
 .blogpost-title h1 {
   margin-bottom: var(--padding-medium);
-  margin-top: 2.5rem;
+  margin-top: 2rem;
 }
 
 .blogpost-meta {
@@ -1050,7 +1058,7 @@ th {
   margin: 0 0 2rem;
   display: flex;
   flex-direction: column;
-  gap: 1.2rem;
+  gap: 1rem;
 }
 
 .footer-link {
@@ -1221,7 +1229,7 @@ th {
 }
 
 .star-number {
-  font-size: calc(var(--font-size-mobile) * 0.85);
+  font-size: calc(var(--font-size-mobile) * 1);
   border-radius: 4px;
   margin: 0;
   opacity: 0.7;
@@ -1895,10 +1903,6 @@ a[data-footnote-ref] {
   color: rgba(var(--color-text-rgb), 0.7);
 }
 
-[data-theme="light"] .photo-meta {
-  color: rgba(var(--color-text-rgb), 0.7);
-}
-
 .meta-row {
   display: flex;
   flex-wrap: wrap;
@@ -1917,7 +1921,8 @@ a[data-footnote-ref] {
 }
 
 .meta-icon {
-  color: var(--blockquote-color);
+  color: rgba(var(--color-text-rgb), 1);
+  opacity: 0.6;
 }
 
 .skeleton-img {
@@ -2743,7 +2748,7 @@ a[data-footnote-ref] {
   }
 
   .site-title {
-    font-size: calc(var(--font-size-desktop) * 1.5);
+    font-size: calc(var(--font-size-desktop) * 1.2);
   }
 
   .about-container {
@@ -3273,6 +3278,10 @@ a[data-footnote-ref] {
   .detail-link:hover {
     color: var(--color-link);
     text-decoration: none;
+  }
+
+  .title-wrapper:hover {
+    background: var(--code-background-color);
   }
 }
 
